Admin viewing user - remove spacing between action buttons for 1600x900 (snowflake) [Fixes #80906722]

--- a/app/assets-default/stylesheets/base/_base.css.scss
+++ b/app/assets-default/stylesheets/base/_base.css.scss
@@ -637,6 +637,14 @@ td.left, th.left {
   }
 }
 
+button[data-target='#deleteUserConfirmDialog'] {
+  margin-right: 5px;
+
+  @media screen and (max-width:1600px) and (max-height:900px) {
+    margin-right: 0;
+  }
+}
+
 
 // From bootstrap. We define our own classes for visibility which use display: inline
 // instead of display: block.
